<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyLocalization</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="football">Indonesia National Team win against Thailand National Team</string>
    <string name="goal">Goal from Indonesia scored by %1$s and %2$s, so the final score is %3$d -%4$d for Indonesia victory </string>

    <plurals name="numberOfSongsAvailable"><item quantity="one">%d song found</item>
        <item quantity="other">%d song found</item>
    </plurals>

    <string name="app_homeurl">13.Visit us at <xliff:g id="homepage">https://www.ittelkom-pwt.ac.id </xliff:g></string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="tab_text1">Home</string>
    <string name="tab_text2">Profile</string>

    <string name="name">Name    : Melani Eka Rahayu</string>
    <string name="address">Address   : Sokaraja Lor 01/03</string>
    <string name="hobby">Hobby   : Tidur</string>
    <string name="quote">Quotes  : uwuwuwu </string>
    <string name="socialm">Social Media     : Ig melaniekrr_</string>

</resources>
