<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">



        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/me" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="30dp"
            android:padding="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_marginBottom="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/name"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/address"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/hobby"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/quote"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/socialm"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</FrameLayout>